Updated practice to lab 2.

--- a/2371/Week-2/practice/src/styles/App.css
+++ b/2371/Week-2/practice/src/styles/App.css
@@ -15,6 +15,13 @@
   gap: 1rem;
 }
 
+.card-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  gap: 1rem;
+}
+
 .ComponentCard {
   display: flex;
   flex-direction: row;
