--- a/2371/Week-2/ReworkLabTwo/LabTwo/src/styles/Parent.css
+++ b/2371/Week-2/ReworkLabTwo/LabTwo/src/styles/Parent.css
@@ -1,9 +1,9 @@
 .parent-container {
   text-align: center;
   padding: 20px;
-  max-width: 800px;
+  max-width: 1000px;
   margin: 0 auto;
-  background-color: #f9f9f9;
+  background-color: #e5e5e5;
   border-radius: 10px;
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
 }
@@ -22,6 +22,7 @@
 
 .owl-cards-container {
   display: flex;
+  flex-direction: row;
   justify-content: center;
   gap: 20px;
   flex-wrap: wrap;
