Working on page styling

--- a/2371/SemesterProject/Weatho/src/styles/_Global.scss
+++ b/2371/SemesterProject/Weatho/src/styles/_Global.scss
@@ -1,6 +1,6 @@
-$text-color: #1f1f1f;
+$text-color: #ffffff;
 $text-color-light: #ffffff;
-$background-color: #3DAFF1;
+$background-color: #34a9e3;
 $primary-color: #dfdbd3;
 $secondary-color: #4e4e4e;
 $tertiary-color: #8d8d8d;
