--- a/2371/SemesterProject/Weatho/src/styles/components/_Header.scss
+++ b/2371/SemesterProject/Weatho/src/styles/components/_Header.scss
@@ -1,3 +1,30 @@
+@use '../Global' as *;
+
 .header {
-  
+  .brand{
+    @include flex(row, center, center);
+    font-size: 1.2rem;
+    font-weight: 700;
+    color: $text-color;
+    text-decoration: none;
+    padding: 0.5rem 1rem;
+    border-radius: 0.5rem;
+    background-color: $background-color;
+    transition: all 0.3s ease-in-out;
+
+    &:hover {
+      background-color: $background-color;
+      transform: scale(1.05);
+    }
+
+    .brand-logo {
+      width: 9rem;
+      height: 9rem;
+      margin-right: .2rem;
+    }
+  }
+
+  .nav {
+    @include flex(row, space-between, center);
+  }
 }
